ENT-6914 Upgrade to Gradle 7, Kotlin 1.8 and JDK 17 (Ent) (#78)
ENT-6914: Upgrade shell to Kotlin 1.8, Gradle 7.6 and JDK17