@@ -1,14 +1,12 @@
 plugins {
-    id 'com.github.johnrengelman.shadow' version '5.2.0' apply false
+    id 'com.github.johnrengelman.shadow' version '7.1.2' apply false
 }
 
-apply plugin: 'kotlin'
+apply plugin: 'org.jetbrains.kotlin.jvm'
 apply plugin: 'java'
 apply plugin: 'application'
 apply plugin: 'net.corda.plugins.quasar-utils'
-apply plugin: 'net.corda.plugins.publish-utils'
-apply plugin: 'com.jfrog.artifactory'
-apply plugin: 'maven-publish'
+apply plugin: 'corda.common-publishing'
 
 // We need to set mainClassName before applying the shadow plugin.
 mainClassName = 'net.corda.tools.shell.standalone.StandaloneShellKt'
@@ -21,9 +19,9 @@ configurations {
 }
 
 dependencies {
-    compile project(":shell")
-    compile files(project(":shell").sourceSets.main.output)
-    compile "org.apache.logging.log4j:log4j-slf4j-impl:$log4jVersion"
+    implementation project(":shell")
+    implementation files(project(":shell").sourceSets.main.output)
+    implementation "org.apache.logging.log4j:log4j-slf4j-impl:$log4jVersion"
 }
 
 tasks.withType(JavaCompile).configureEach {
@@ -41,19 +39,19 @@ shadowJar {
     archiveClassifier = ''
     mergeServiceFiles()
     manifest {
-        attributes "Corda-Release-Version": cordaReleaseVersion
+        attributes "Corda-Release-Version": cordaOSReleaseVersion
         attributes('Corda-Platform-Version': cordaPlatformVersion)
         attributes "Corda-Vendor": cordaBuildEdition
+        attributes('Add-Opens': 'java.base/java.lang java.base/java.time java.base/java.io java.base/java.util')
     }
 }
 
-artifacts {
-    archives shadowJar
-    publish shadowJar
-}
-
-publish {
-    dependenciesFrom configurations.cordaShellDependencies
-    name shadowJar.archiveBaseName
-    disableDefaultJar = true
+publishing {
+    publications {
+        maven(MavenPublication) {
+            artifactId 'corda-standalone-shell'
+            artifact(shadowJar) {
+            }
+        }
+    }
 }
